--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dale Hayward</title>
   </head>
   <body>
-    <h1>Hello, Code School!.</h1>
+    <h1>Hello, Code School!</h1>
     <ul>
       <li>Python</li>
       <li>Android</li>
